source/stylesheets/landing.css.scss
/* ... */
#navContainer {
    width: 90%;
    margin-left: 5%;
    margin-right: 5%;
}

.grey-text {
    color: rgb(182,182,182);
}

.red-text {
    color: rgb(252,70,75);
}

.blue-text {
    color: rgb(62,182,226);
}

h3#lightPurpTxt {
    color: rgba(252,252,252,.4);
}

a.light-hover {
    &:hover, &:active {
        color: rgb(242,242,242);
    }
}

a.dark-hover {
    &:hover, &:active {
        color: rgb(2,2,2);
    }
}

